src/test/ui/rfc-1937-termination-trait/termination-trait-impl-trait.stderr
error[E0277]: `main` has invalid return type `impl std::marker::Copy`
  --> $DIR/termination-trait-impl-trait.rs:2:14
   |
LL | fn main() -> impl Copy { }
   |              ^^^^^^^^^ `main` can only return types that implement `std::process::Termination`
   |
   = help: consider using `()`, or a `Result`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0277`.
