src/test/ui/rfc-1937-termination-trait/termination-trait-impl-trait.rs
// Tests that an `impl Trait` that is not `impl Termination` will not work.
fn main() -> impl Copy { }
//~^ ERROR `main` has invalid return type `impl std::marker::Copy`
